--- a/src/main/webapp/views/view2.html
+++ b/src/main/webapp/views/view2.html
@@ -27,7 +27,7 @@
 		
 		.mainBody form {
 		    display: inline-flex;
-		    align-items: center; /* 保持輸入框及符號在垂直方向上居中 */
+		    align-items: center; 
 		}
 
 		.footer{
